# font-replace

./: .gitignore  CLAUDE.md  LICENSE  Pipfile  README.md  config-example.json  main.py  main.spec  pyproject.toml  replace-msyh.py  replace.py  restore-msyh.py  restore.py  utils.py  yahei&segoe.json
config/: __init__.py  loader.py
converters/: __init__.py  base.py  ttc.py  ttf.py
plugin/: __init__.py  base.py  msyh.py  segoevf.py
replace/: replace.py
replacer/: base.py  replace.py  ttc.py  ttf.py
restorer/: restore.py
utils/: __init__.py  common.py  font.py
