[project]
name = "font-replace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "afdko==4.0.2",
    "altgraph==0.17.5",
    "booleanoperations==0.9.0",
    "brotli==1.2.0",
    "colorama==0.4.6",
    "defcon==0.12.2",
    "fontmath==0.9.4",
    "fontparts==0.13.3",
    "fontpens==0.2.4",
    "fonttools==4.60.1",
    "lxml==6.0.2",
    "mutatormath==3.0.1",
    "packaging==25.0",
    "pefile==2024.8.26",
    "psutil==7.1.3",
    "pyclipper==1.3.0.post6",
    "pyinstaller==6.17.0",
    "pyinstaller-hooks-contrib==2025.11",
    "pywin32-ctypes==0.2.3",
    "setuptools==80.9.0",
    "tqdm==4.67.1",
    "ufonormalizer==0.6.3",
    "ufoprocessor==1.14.1",
    "zopfli==0.4.0",
]
